--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@HillaryBautista/cordova-plugin-camera-roll",
+  "name": "cordova-plugin-camera-roll",
   "version": "1.0.8",
   "cordova": {
     "id": "cordova-plugin-camera-roll",
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   },
-  "description": "Cordova Camera Roll Plugin Ios - Fork by HillaryBautista",
-  "repository": "https://github.com/HillaryBautista/cordova-camera-roll",
-  "issue": "https://github.com/HillaryBautista/cordova-camera-roll/issues",
+  "description": "Cordova CameraRoll Plugin",
+  "repository": "https://github.com/driftyco/cordova-plugin-camera-roll.git",
+  "issue": "https://github.com/driftyco/cordova-plugin-camera-roll/issues",
   "keywords": [
     "ionic",
     "cordova",
@@ -18,6 +19,6 @@
     "cordova-ios",
     "cordova-android"
   ],
-  "author": "Fork by Hillary Bautista",
-  "license": "MIT"
+  "author": "Ionic",
+  "license": "Apache 2.0"
 }
