--- a/plugin.xml
+++ b/plugin.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    id="com.drifty.cordova.cameraroll"
-    version="0.2.1">
+    id="cordova-plugin-cameraroll"
+    version="0.0.1">
     <name>CameraRoll</name>
-    <description>Drifty Camera Roll Plugin</description>
-    <license>MIT</license>
+    <description>Fork Camera Roll Plugin</description>
     <keywords>cordova,camera,camera roll</keywords>
+    <license>MIT</license>
+    <repo>https://github.com/HillaryBautista/cordova-camera-roll</repo>
+    <issue>https://github.com/HillaryBautista/cordova-camera-roll/issues</issue>
+
+    <engines>
+        <engine name="cordova" version=">=9.0.0"/>
+    </engines>
+
+    <asset src="www/CameraRoll.js" target="js/CameraRoll.js"/>
 
     <js-module src="www/CameraRoll.js" name="CameraRoll">
         <clobbers target="CameraRoll" />
